Document batch run prerequisites and add sweeper